files/k8s/zwifthub-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwifthub
  namespace: default
  labels:
    app: zwifthub
    app.kubernetes.io/name: zwifthub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zwifthub
  template:
    metadata:
      labels:
        app: zwifthub
        app.kubernetes.io/name: zwifthub
    spec:
      containers:
      - name: zwifthub
        image: segvcr.azurecr.io/zwifthub:0.2
        volumeMounts:
        # Override the appsettings with the real settings.
        - name: zwifthub-appsettings
          mountPath: "/app/appsettings.json"
          subPath: "appsettings.json"
          readOnly: true
        ports:
        - containerPort: 5000
      imagePullSecrets:
        - name: segvcr-auth
      volumes:
        - name: zwifthub-appsettings
          configMap:
            name: zwifthub-config
---
apiVersion: v1
kind: Service
metadata:
  name: zwifthub
spec:
  selector:
    app.kubernetes.io/name: zwifthub
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwifthub-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-prefixstrip@kubernetescrd
  labels:
    app.kubernetes.io/name: zwifthub
spec:
  rules:
  - http:
      paths:
      - path: /zwift
        pathType: Prefix
        backend:
          service:
            name: zwifthub
            port:
              number: 5000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prefixstrip
spec:
  stripPrefix:
    prefixes:
      - /zwift
  forceSlash: true
